--- a/manifests/argocd/install.yaml
+++ b/manifests/argocd/install.yaml
@@ -3007,6 +3007,7 @@ spec:
     targetPort: 8080
   selector:
     app.kubernetes.io/name: argocd-server
+  type : LoadBalancer
 ---
 apiVersion: v1
 kind: Service
